# bumblebee

./: AGENTS.md  LICENSE  README.md  SPEC.md
.pi/: settings.json
.pi/skills/bumblebee-voice/: SKILL.md
.pi/skills/bumblebee-voice/assets/: prompts.md
.pi/skills/bumblebee-voice/references/: examples.md
.pi/skills/bumblebee-voice/scripts/: voice-line.py  voice.py
bumblebee/: pyproject.toml
bumblebee-bootstrap/: README.md  pyproject.toml
bumblebee-bootstrap/bootstrap/: __init__.py  console.py  fingerprint.py  jellyfin.py  lyrics.py  metadata.py  models.py  organize.py  utils.py
bumblebee/bumblebee/: __init__.py  __main__.py  audio.py  cli.py  db.py  lrc_parser.py  models.py  search.py  tui.py  web_api.py
bumblebee/web/: index.html  package.json  tailwind.config.js
bumblebee/web/src/: App.tsx  api.ts  index.css  types.ts
bumblebee/web/src/components/: AudioPlayer.tsx  ChainBuilder.tsx  ExportPanel.tsx  LyricViewer.tsx  MatchCard.tsx  Navbar.tsx  ResultsList.tsx  SearchBar.tsx  SnippetExporter.tsx  WaveformVisualizer.tsx
bumblebee/web/src/hooks/: SnippetContext.tsx  useAudio.ts  useSearch.ts  useSnippet.ts
