[project]
name = "bumblebee"
version = "1.0.0"
description = "Speak like Bumblebee - lyric-based song search and audio snippet engine"
requires-python = ">=3.10"
dependencies = [
    "pydub>=0.25",
    "rich>=13.0",
    "rapidfuzz>=3.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "mutagen>=1.47",
]

[project.scripts]
bumblebee = "bumblebee.cli:main"
